Work on config module

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,17 @@
 [timer]
-mode = countdown
-work_minutes = 25
-break_minutes = 5
-long_break_minutes = 10
-default_category = Coding
-default_subcategory = Working on Pomodoro app
+timer_mode          = COUNTDOWN
+work_minutes        = 25
+break_minutes       = 5
+long_break_minutes  = 15
+default_category    = Coding
+default_activity    = Working on Pomodoro app
 
 [presets]
 # format: work_minutes,break_mitutes|
-short = 15,3 | 15,3 | 15,10 
-standard = 25,5 | 25,5 | 25,15
-long = 25,5 | 25,5 | 25,5 | 25,15
+short               = 15,3 | 15,3 | 15,10
+standard            = 25,5 | 25,5 | 25,15
+long                = 25,5 | 25,5 | 25,5 | 25,15
+
+[ui]
+color_theme         = CYBERPUNK
+borders_type        = DOUBLE
