Added a struct for all config, function for loading config from file

--- a/config.ini
+++ b/config.ini
@@ -6,12 +6,12 @@ long_break_minutes  = 15
 default_category    = Coding
 default_activity    = Working on Pomodoro app
 
-[presets]
-# format: work_minutes,break_mitutes|
-short               = 15,3 | 15,3 | 15,10
-standard            = 25,5 | 25,5 | 25,15
-long                = 25,5 | 25,5 | 25,5 | 25,15
-
 [ui]
 color_theme         = CYBERPUNK
 borders_type        = DOUBLE
+
+[presets]
+# format: work_minutes,break_mitutes|
+Short               = 15,3 | 15,3 | 15,10
+Standard            = 25,5 | 25,5 | 25,15
+Long                = 25,5 | 25,5 | 25,5 | 25,15
