Changed the settings logic, rewrited some hardcoded values in UI module

--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,18 @@
-[timer]
-timer_mode          = COUNTDOWN
-work_minutes        = 25
-break_minutes       = 5
-long_break_minutes  = 15
-default_category    = Coding
-default_activity    = Working on Pomodoro app
+[countdown]
+work_minutes          = 25
+break_minutes         = 5
+num_cycles            = 3
+long_break_minutes    = 15
+num_sessions          = 1
+
+[activity]
+category              = Coding 
+activity              = Building a cozy Pomodoro app
 
 [ui]
-color_theme         = CYBERPUNK
-borders_type        = DOUBLE
+color_theme           = CYBERPUNK
+borders_type          = DOUBLE
 
-[presets]
-# format: work_minutes,break_mitutes|
-Short               = 15,3 | 15,3 | 15,10
-Standard            = 25,5 | 25,5 | 25,15
-Long                = 25,5 | 25,5 | 25,5 | 25,15
+# [activities]
+# Coding:
+#   - Building a cozy Pomodoro app
