Added a loop logic for the timer

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,20 @@
+# Color themes:
+# - MINIMAL
+# - SIMPLE
+# - CYBERPUNK
+# - FOREST
+# - SUNSET
+#
+# Borders types:
+# - MINIMAL
+# - SINGLE
+# - DOUBLE
+
 [countdown]
-work_minutes          = 25
-break_minutes         = 5
-num_cycles            = 3
-long_break_minutes    = 15
+work_minutes          = 1
+break_minutes         = 1
+num_cycles            = 2
+long_break_minutes    = 2
 num_sessions          = 1
 
 [activity]
@@ -11,7 +23,7 @@ activity              = Building a cozy Pomodoro app
 
 [ui]
 color_theme           = CYBERPUNK
-borders_type          = DOUBLE
+borders_type          = SINGLE
 
 # [activities]
 # Coding:
