Added themes for the progress bar (without the actual UI integration so far)

--- a/config.ini
+++ b/config.ini
@@ -22,8 +22,10 @@ category              = Coding
 activity              = Building a cozy Pomodoro app
 
 [ui]
+layout_theme          = STANDARD
 color_theme           = CYBERPUNK
 borders_type          = SINGLE
+progress_theme        = STANDARD
 
 # [activities]
 # Coding:
