Integrated layout themes to the UI logic

--- a/config.ini
+++ b/config.ini
@@ -22,9 +22,9 @@ category              = Coding
 activity              = Building a cozy Pomodoro app
 
 [ui]
-layout_theme          = STANDARD
+layout_theme          = MINIMAL
 color_theme           = CYBERPUNK
-borders_type          = SINGLE
+borders_theme         = SINGLE
 progress_theme        = STANDARD
 
 # [activities]
