Integrated the progress bar into the UI logic

--- a/config.ini
+++ b/config.ini
@@ -22,10 +22,10 @@ category              = Coding
 activity              = Building a cozy Pomodoro app
 
 [ui]
-layout_theme          = MINIMAL
+layout_theme          = STANDARD
 color_theme           = CYBERPUNK
 borders_theme         = SINGLE
-progress_theme        = STANDARD
+progress_theme        = SIMPLE
 
 # [activities]
 # Coding:
