Improved color themes and added a colored status symbol to the minimal layout

--- a/config.ini
+++ b/config.ini
@@ -22,9 +22,9 @@ category              = Coding
 activity              = Building a cozy Pomodoro app
 
 [ui]
-layout_theme          = STANDARD
-color_theme           = CYBERPUNK
-borders_theme         = SINGLE
+layout_theme          = MINIMAL
+color_theme           = SUNSET
+borders_theme         = DOUBLE
 progress_theme        = SIMPLE
 
 # [activities]
