Some UI changes

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,7 @@
-# Color themes:
-# - MINIMAL
-# - SIMPLE
-# - CYBERPUNK
-# - FOREST
-# - SUNSET
-#
-# Borders types:
-# - MINIMAL
-# - SINGLE
-# - DOUBLE
+# Layout themes:       MINIMAL, SMALL, STANDARD
+# Color themes:        MINIMAL, SIMPLE, CYBERPUNK, FOREST, SUNSET
+# Borders themes:      MINIMAL, SINGLE, DOUBLE
+# Progress bar themes: MINIMAL, SIMPLE, STANDARD
 
 [countdown]
 work_minutes          = 1
@@ -22,10 +15,10 @@ category              = Coding
 activity              = Building a cozy Pomodoro app
 
 [ui]
-layout_theme          = MINIMAL
+layout_theme          = STANDARD
 color_theme           = SUNSET
 borders_theme         = DOUBLE
-progress_theme        = SIMPLE
+progress_theme        = STANDARD
 
 # [activities]
 # Coding:
